Salesforce/main/default/objects/Proposta__c/Proposta__c.object-meta.xml
<CustomObject>
    <description>Proposta utilizada para o projeto de Clearing - Conecta Sementes</description>
    <label>Proposta</label>
    <nameField>
        <label>Nome de Proposta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>