Salesforce/main/default/objects/Proposta__c/fields/Anuncio__c.field-meta.xml
<CustomField>
    <fullName>Anuncio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Anúncio</label>
    <referenceTo>Anuncio__c</referenceTo>
    <relationshipLabel>Propostas</relationshipLabel>
    <relationshipName>Propostas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>