Salesforce/main/default/objects/Proposta__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Propostas</relationshipLabel>
    <relationshipName>Propostas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>