Salesforce/main/default/objects/Proposta__c/fields/Data_Revisado__c.field-meta.xml
<CustomField>
    <fullName>Data_Revisado__c</fullName>
    <label>Data Revisado</label>
    <type>DateTime</type>
</CustomField>