Salesforce/main/default/objects/Proposta__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <type>TextArea</type>
</CustomField>