Salesforce/main/default/objects/Proposta__c/fields/Motivo_Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cancelado__c</fullName>
    <label>Motivo Cancelado</label>
    <type>TextArea</type>
</CustomField>