Salesforce/main/default/objects/Proposta__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem Interesse</fullName>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Rejeitada pelo Admin</fullName>
            </value>
            <value>
                <fullName>Aceita</fullName>
            </value>
            <value>
                <fullName>Negócio Fechado</fullName>
            </value>
            <value>
                <fullName>Negócio Desfeito</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>